[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Plop.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "anim"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Dash1/Line2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, 25 ), Vector2( 0, 30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dash1/Line2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.025, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Dash2/Line2D:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, 25 ), Vector2( 0, 30 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Dash2/Line2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.025, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Dash3/Line2D:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, 25 ), Vector2( 0, 30 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Dash3/Line2D:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.025, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Dash4/Line2D:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, 25 ), Vector2( 0, 30 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Dash4/Line2D:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.025, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Dash5/Line2D:position")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, 25 ), Vector2( 0, 30 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Dash5/Line2D:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.025, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Plop" type="Node2D"]
script = ExtResource( 1 )
color = Color( 1, 1, 1, 1 )

[node name="Dash1" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="Dash1"]
position = Vector2( 0, 20.5859 )
scale = Vector2( 1.2, 1.2 )
points = PoolVector2Array( 0, 0, 0, 15 )
default_color = Color( 0.913725, 0.611765, 0.341176, 1 )

[node name="Dash2" type="Node2D" parent="."]
rotation = 1.25664

[node name="Line2D" type="Line2D" parent="Dash2"]
position = Vector2( 0, 20.5859 )
points = PoolVector2Array( 0, 0, 0, 15 )
default_color = Color( 0.913725, 0.611765, 0.341176, 1 )

[node name="Dash3" type="Node2D" parent="."]
rotation = 2.51327

[node name="Line2D" type="Line2D" parent="Dash3"]
position = Vector2( 0, 20.5859 )
points = PoolVector2Array( 0, 0, 0, 15 )
default_color = Color( 0.913725, 0.611765, 0.341176, 1 )

[node name="Dash4" type="Node2D" parent="."]
rotation = 3.76991

[node name="Line2D" type="Line2D" parent="Dash4"]
position = Vector2( 0, 20.5859 )
points = PoolVector2Array( 0, 0, 0, 15 )
default_color = Color( 0.913725, 0.611765, 0.341176, 1 )

[node name="Dash5" type="Node2D" parent="."]
rotation = 5.02655

[node name="Line2D" type="Line2D" parent="Dash5"]
position = Vector2( 0, 20.5859 )
points = PoolVector2Array( 0, 0, 0, 15 )
default_color = Color( 0.913725, 0.611765, 0.341176, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/anim = SubResource( 1 )
